--- a/.github/workflows/queue.yaml
+++ b/.github/workflows/queue.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        run: echo "hello"
+        run: exit 1
 
   echo2:
     runs-on: ubuntu-latest
