--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -14,7 +14,7 @@ jobs:
           private-key: ${{ secrets.APP_KEY }}
       - name: merge pr
         run: |
-          gh pr merge 10 --repo ${GITHUB_REPOSITORY} \
+          gh pr merge ${{ github.event.pull_request.number }} --repo ${GITHUB_REPOSITORY} \
             --admin --merge
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
